# ossa-cookbook

./: Cargo.toml
src/: main.rs  state.rs
src/gui/: form.rs
src/gui/layout/: login.rs  mod.rs
src/gui/layout/recipe/: form.rs
src/gui/layout/share/: form.rs
src/state/: internal.rs
style/: style.css
