[package]
name = "ossa-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dioxus =  {version = "0.6.0"} # {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"}
dioxus-desktop = {version = "0.6.0"} # {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"}
dioxus-heroicons = {git = "https://github.com/jprider63/dioxus-heroicons.git", rev="454275f44cff27306ddd55601129a495aeb8c92c"}
dioxus_markdown = {git = "https://github.com/jprider63/dioxus-markdown.git", rev="11fe6502896870bf328b4c6475aaf48112e83cdd"}
futures = "*"
keyboard-types = "*"
im = "15.1.0"
manganis = "*"
ossa-core = {git = "https://github.com/jprider63/ossa.git", rev="29a4c54e1772f7b714d8f2da70fcdb8872f5b8f7"}
ossa-crdt = {git = "https://github.com/jprider63/ossa.git", rev="29a4c54e1772f7b714d8f2da70fcdb8872f5b8f7"}
ossa-dioxus = {git = "https://github.com/jprider63/ossa.git", rev="29a4c54e1772f7b714d8f2da70fcdb8872f5b8f7"}
ossa-typeable = {git = "https://github.com/jprider63/ossa.git", rev="29a4c54e1772f7b714d8f2da70fcdb8872f5b8f7", features=["im"]}
# ossa-core = {path="../ossa/ossa-core"}
# ossa-crdt = {path="../ossa/ossa-crdt"} 
# ossa-dioxus = {path="../ossa/ossa-dioxus"} 
# ossa-typeable = {path="../ossa/ossa-typeable", features=["im"]}
serde = "*"
tauri = "2.2.4"
tracing = "*"
tracing-subscriber = "*"

# tmp?
tokio = {version="*", features=["rt","rt-multi-thread","net"]}
tokio-util = {version="*", features=["codec"]}

